# backend/models/Comment.js
@@ -1,0 +1,29 @@
+const mongoose = require("mongoose");
+
+const commentSchema = new mongoose.Schema(
+    {
+        issue: {
+            type: mongoose.Schema.Types.ObjectId,
+            ref: "Issue",
+            required: true
+        },
+
+        author: {
+            type: mongoose.Schema.Types.ObjectId,
+            ref: "User",
+            required: true
+        },
+
+        content: {
+            type: String,
+            required: true,
+            trim: true,
+            maxlength: 2000
+        }
+    },
+    {
+        timestamps: true
+    }
+);
+
+module.exports = mongoose.model("Comment", commentSchema);
