# backend/routes/issueRoutes.js
@@ -8,6 +8,13 @@ const {
     deleteIssue
 } = require("../controllers/issueController");
 
+const {
+    createComment,
+    getComments,
+    updateComment,
+    deleteComment
+} = require("../controllers/commentController");
+
 const protect = require("../middleware/authMiddleware");
 
 const router = express.Router();
@@ -21,5 +28,22 @@ router.get("/:id", protect, getIssueById);
 router.put("/:id", protect, updateIssue);
 
 router.delete("/:id", protect, deleteIssue);
+
+// Issue comments
+router.post("/:issueId/comments", protect, createComment);
+
+router.get("/:issueId/comments", protect, getComments);
+
+router.put(
+    "/:issueId/comments/:commentId",
+    protect,
+    updateComment
+);
+
+router.delete(
+    "/:issueId/comments/:commentId",
+    protect,
+    deleteComment
+);
 
 module.exports = router;
